--- a/Assets/Resources/Uss/ButtonStyles.uss
+++ b/Assets/Resources/Uss/ButtonStyles.uss
@@ -34,7 +34,10 @@
     min-width:250px;
     min-height:50px;
     font-size: 36px;
+    unity-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
+
+ 
 
 
 
