Added questionnaire builder

--- a/Assets/Resources/Uss/SharedPageStyles.uss
+++ b/Assets/Resources/Uss/SharedPageStyles.uss
@@ -58,7 +58,8 @@
     show-vertical-scroller: false;
     show-horizontal-scroller: false;
 
-    overflow: hidden;  
+    overflow-y: scroll;
+    overflow-x: hidden; /* optional if vertical only */
 }
 
 .shared-scroll-fade-top, .shared-scroll-fade-bottom {
