--- a/Assets/Resources/Uss/DemoAStyles.uss
+++ b/Assets/Resources/Uss/DemoAStyles.uss
@@ -61,7 +61,7 @@
     flex-basis: 0;
     width: 100%;
     height: 100%;
-    min-height: 100%;
+    
     show-vertical-scroller: false;
     show-horizontal-scroller: false;
     background:color: #000000;
@@ -69,7 +69,8 @@
     padding-left: 50px;
     padding-right: 50px;
     padding-bottom: 20px;
-  
+
+ 
     overflow: scroll;
    
 }
@@ -106,7 +107,7 @@
 /* Menu card container */
 .menu-card {
     width: 100%;               /* full width of scroll view */
-    height: 300px; 
+    height: 275px; 
   
     display: flex;
     flex-direction: row;       /* horizontal layout */
@@ -120,9 +121,9 @@
 }
 
 .menu-card-icon-contiainer {
-    width: 28%; /* fixed or % of card */
+    width: 25%; /* fixed or % of card */
     height: 100%;
-    min-width:28%;
+    min-width:25%;
     min-height:100%;
     background-color: black; /* faint silver placeholder */
     display: flex;
@@ -134,8 +135,8 @@
 }
 
 .menu-card-icon {
-    width: 160px;
-    height: 160px;
+    width: 140px;
+    height: 140px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -173,14 +174,17 @@
 
 .menu-card-title
 {
-  font-size:36px;	
+  font-size:42px;
+  -unity-font-definition: url("/Assets/Resources/Fonts/Lato/Lato-Heavy-sdf.asset");
 }
 
+
 .menu-card-blurb {
-    font-size: 24px;
+    font-size: 32px;
     white-space: normal;      /* allows wrapping */
     overflow: visible;        /* ensures text isn’t clipped */
     flex-wrap: wrap;          /* extra safety in flex containers */
+    -unity-font-definition: url("/Assets/Resources/Fonts/Lato/Lato-Heavy-sdf.asset");
 }
 
 .menu-card-progress-bar-container {
@@ -195,7 +199,8 @@
 .menu-card-progress-bar
 {
   width:90%;
-  height: 30%;
+  height: 20%;
+  min-height:20%;
   background-color: green;
   border-radius: 50%;
 }
