--- a/Assets/Resources/Uss/DemoAStyles.uss
+++ b/Assets/Resources/Uss/DemoAStyles.uss
@@ -9,17 +9,53 @@
 }
 
 
+.header-test
+{
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    width:100%;
+    min-height: 5%;
+    padding-top: 10px;
+    padding-left: 40px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+}
+
+.header-title
+{
+	
+
+}
+
+
+
+/* Individual header rows */
+.header-row {
+    display: flex;
+    flex-direction: row;      /* contents inside each row lay out horizontally */
+    align-items: center;
+    justify-content: flex-start;
+    width:100%;
+}
+
+.vertical-container {
+    display: flex;
+    flex-direction: column; /* stack children */
+    align-items: stretch;   /* optional */
+    justify-content: flex-start;
+}
+
+
 
 /* Header container */
 .header-container {
-    height: 10%;            /* 10% of parent */
+    height: 100%;            /* 10% of parent */
     width: 100%;
     display: flex;
     flex-direction: row;    /* horizontal */
     justify-content: space-between; /* label left, image right */
     align-items: center;    /* vertically centered */
-    padding-left: 30px;
-    padding-right: 30px;
     background-color: #fff; /* placeholder color */
 }
 
@@ -230,6 +266,20 @@
    
 }
 
+.progress-bar-header
+{
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    width:100%;
+    min-width:100%
+    
+    height:auto;
+      align-items: center;
+    justify-content: center;
+    padding: 4px;
+}
+
 .progress-bar-new {
     flex-direction: row;
     width: 900px;           /* fill parent */
@@ -255,7 +305,7 @@
     background-color: #75E14E; /* green fill */
     height: 100%;
     border-radius: 12px;
-    transition: width 0.3s ease-in-out; /* smooth animation if you want */
+    transition: width 1s ease-in-out; /* smooth animation if you want */
 }
 
 
