--- a/Assets/Resources/Uss/DemoAStyles.uss
+++ b/Assets/Resources/Uss/DemoAStyles.uss
@@ -9,7 +9,21 @@
 }
 
 
-.header-test
+.header-nav
+{
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    width:100%;
+    min-height: 5%;
+    padding-top: 25px;
+    padding-left: 40px;
+    padding-right: 25px;
+    padding-bottom: 20px;
+    align-items: flex-end;
+}
+
+.header-title
 {
     display: flex;
     flex-direction: column;
@@ -20,11 +34,8 @@
     padding-left: 40px;
     padding-right: 20px;
     padding-bottom: 20px;
-}
-
-.header-title
-{
-	
+    align-items: flex-start;
+   
 
 }
 
@@ -62,8 +73,9 @@
 /* Header label */
 .header-label {
    
-    font-size: 48px;
-    color: #666666; /* medium grey */
+    font-size: 56px;
+    color: #0C1353; /* medium grey */
+    -unity-font-definition: url("/Assets/Resources/Fonts/Lato/Lato-Heavy-sdf.asset");
    
 }
 
@@ -272,7 +284,7 @@
     flex-direction: column;
     background-color: #fff;
     width:100%;
-    min-width:100%
+    min-width:100%;
     
     height:auto;
       align-items: center;
