--- a/Assets/Resources/Uss/QuestionnaireSyles.uss
+++ b/Assets/Resources/Uss/QuestionnaireSyles.uss
@@ -102,12 +102,13 @@ flex-direction: row;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0px;
+    padding: 20px;
     background-color: #3382CC;
     color: white;
     width: 100%;
     height: auto;
-    max-height:35%;
+    max-height:40%;
+    min-height:12%;
     border-top-left-radius: 48px;
     border-top-right-radius: 48px;
     border-bottom-left-radius: 0;
@@ -119,14 +120,16 @@ flex-direction: row;
     width: 80%;
     height: 40%;
     min-width:50%;
-    min-height:20%;
-     max-height:30%;
+    min-height:100px;
+     max-height:100px;
     font-size: 46px;
     color: #0C1353;   
     -unity-font-definition: url("/Assets/Resources/Fonts/Lato/Lato-Heavy-sdf.asset");
     background-color: #fff;
     border-radius:48px;
-    margin-bottom:20px;
+    margin-top:15px;
+    margin-bottom:15px;
+    
 }
 
 .fullscreen-fade-container {
