--- a/Assets/Resources/Uss/QuestionnaireSyles.uss
+++ b/Assets/Resources/Uss/QuestionnaireSyles.uss
@@ -43,11 +43,11 @@
 .question-container-label
 {
    padding: 15px;
-   font-size: 48px;
+   font-size: 42px;
    white-space: normal;
     overflow-wrap: break-word;
     word-break: break-word; /* extra safety for long words */
-   -unity-font-definition: url("/Assets/Resources/Fonts/Lato/Lato-Heavy-sdf.asset");
+   -unity-font-definition: url("/Assets/Resources/Fonts/Lato/Lato-Bold-sdf.asset");
      color:#0C1353;
 }
 
@@ -288,6 +288,22 @@ popup-title-container
     background-repeat: no-repeat;
 
     margin-top: 50px;
+}
+
+.info-page-content-text
+{
+
+   padding: 5px;
+   font-size: 42px;
+   white-space: normal;
+
+       /* Remove word breaking */
+    overflow-wrap: normal;
+    word-break: normal;
+  
+   
+   -unity-font-definition: url("/Assets/Resources/Fonts/Lato/Lato-Bold-sdf.asset");
+     color:#0C1353;
 }
 
 
