--- a/Assets/Resources/Uss/DemoAStyles.uss
+++ b/Assets/Resources/Uss/DemoAStyles.uss
@@ -9,18 +9,18 @@
 }
 
 
-.header-nav
-{
+.header-spacer {
+    flex: 1;           /* takes all remaining space */
+}
+
+.header-nav {
     display: flex;
-    flex-direction: column;
+    flex-direction: row; 
+    justify-content: space-between;  /* pushes first item left, last item right */
+      
     background-color: #fff;
-    width:100%;
-    min-height: 5%;
-    padding-top: 25px;
-    padding-left: 40px;
-    padding-right: 25px;
-    padding-bottom: 20px;
-    align-items: flex-end;
+    width: 100%;
+    padding: 25px 25px 20px 40px;
 }
 
 .header-title
