--- a/Assets/Resources/Uss/QuestionnaireSyles.uss
+++ b/Assets/Resources/Uss/QuestionnaireSyles.uss
@@ -30,7 +30,7 @@
     padding: 20px;
     margin: 8px 0;
     background-color: #f9f9f9;
-    border: 2px solid #000;
+    border: 4px solid #000;
     border-radius: 6px;
     margin-bottom: 30px;
 
@@ -85,14 +85,9 @@ flex-direction: row;
 }
 
 .unanswered-highlight {
-      border-left-width: 4px;
-    border-top-width: 4px;
-    border-right-width: 4px;
-    border-bottom-width: 4px;
-    border-left-color: red;
-    border-top-color: red;
-    border-right-color: red;
-    border-bottom-color: red;
+    border-width: 4px; 
+    border-color: red;
+  
     border-radius: 12px;
 }
 
