--- a/Assets/Resources/Uss/QuestionnaireSyles.uss
+++ b/Assets/Resources/Uss/QuestionnaireSyles.uss
@@ -127,6 +127,23 @@ flex-direction: row;
     
 }
 
+.questionnaire-footer-button-inverted
+{
+    width: 90%;
+    height: 40%;
+    min-width:50%;
+    min-height:100px;
+     max-height:100px;
+    font-size: 36px;
+    color: #fff;   
+    -unity-font-definition: url("/Assets/Resources/Fonts/Lato/Lato-Heavy-sdf.asset");
+    background-color: #3382CC;
+    border-radius:48px;
+    margin-top:15px;
+    margin-bottom:15px;
+    
+}
+
 .fullscreen-fade-container {
     background-color: rgba(0, 0, 0, 0); /* or whatever overlay color you want */
     transition: background-color 0.25s;
@@ -181,13 +198,26 @@ flex-direction: row;
 
 popup-title-container
 {
-      display: flex;           /* enable flex layout */
-    flex-direction: column;  /* or row if you prefer */
-    width: 100%;
-           
+    display: flex;           
+    flex-direction: column;  
+    width: 100%;       
     background-color: #eee;
     align-items:center;
-    padding-top:100px;
+    padding-top:200px;
+    padding-bottom:50px;
+}
+
+popup-title-container-centre
+{
+    display: flex;           
+    flex-direction: column;  
+    width: 100%;       
+    background-color: #eee;
+    align-items: center;       /* horizontal alignment of children */
+    justify-content: center;   /* optional: vertical alignment inside container */
+    text-align: center;        /* centers text inside child elements */
+    padding-top: 200px;
+    padding-bottom: 50px;
 }
 
 
