--- a/Assets/Resources/Uss/DemoAStyles.uss
+++ b/Assets/Resources/Uss/DemoAStyles.uss
@@ -20,7 +20,10 @@
       
     background-color: #fff;
     width: 100%;
-    padding: 25px 25px 20px 40px;
+    padding-top:25px;
+    padding-bottom:40px;
+    padding-left:40px;
+    padding-right:25px;
 }
 
 .header-title
@@ -99,6 +102,7 @@
     justify-content: center;     /* center vertically */
     align-items: center;         /* center horizontally */
     background-color: #fff;       /* placeholder color */
+    
       
 }
 
