--- a/Assets/Resources/Uss/SharedPageStyles.uss
+++ b/Assets/Resources/Uss/SharedPageStyles.uss
@@ -62,6 +62,10 @@
     overflow-x: hidden; /* optional if vertical only */
 }
 
+.shared-scroll-no-scroll-bars > .unity-scroll-view__content {
+    align-items: center;
+}
+
 .shared-scroll-fade-top, .shared-scroll-fade-bottom {
     position: absolute;
     left: 0;
