--- a/Assets/Resources/Uss/DemoAStyles.uss
+++ b/Assets/Resources/Uss/DemoAStyles.uss
@@ -192,14 +192,25 @@
     border-bottom-left-radius: 46px;
 }
 
-.menu-card-icon {
-    width: 140px;
-    height: 140px;
+.menu-card-icon-background {
+    width: 148px;
+    height: 164px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: rgba(192, 192, 192, 0.3);
+    background-color: rgba(128, 128, 128, 0.4);
+
     border-radius: 24px; /* optional */
+    display: flex;            /* enables Flexbox layout */
+    justify-content: center;  /* horizontal centering */
+    align-items: center; 
+  
+}
+
+.menu-card-icon
+{
+   width:104px;
+   height:104px;
 }
 
 .menu-card-content-container 
