--- a/Assets/Resources/Uss/NavigationStyles.uss
+++ b/Assets/Resources/Uss/NavigationStyles.uss
@@ -11,6 +11,18 @@
     border-radius: 1px;
 }
 
+.nav-divider
+{
+   
+    display:flex;
+   
+   background-repeat: repeat;
+   background-image: url("/Assets/Resources/Sprites/shadow.png");
+   background-color:#eee;
+   height:25px;
+
+}
+
 /* Header logo */
 .header-logo {
     width: 256px;         /* adjust size as needed */
@@ -22,12 +34,48 @@
     background-position: left center;      /* align to left center */
 }
 
+.nav-body-container {
+    flex: 1;
+                    /* fills remaining space */
+    display: flex;
+    flex-direction: column;      /* stack children vertically */
+    justify-content: center;     /* center vertically */
+    align-items: center;         /* center horizontally */
+    background-color: #fff;       /* placeholder color */
+    
+      
+}
+
+/* Scrollview container */
+.nav-scroll-no-scroll-bars
+{
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
+    width: 100%;
+    height: 100%;
+    
+    show-vertical-scroller: false;
+    show-horizontal-scroller: false;
+    background-color: #fff;
+    padding-top: 0px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 20px;
+  
+
+ 
+    overflow: scroll;
+   
+}
+
+
 
 /* Header image on the left */
 .nav-header-image {
     width: 64px;   /* fixed size, adjust as needed */
     height: 64px;
-    object-fit: contain; /* keep aspect ratio */
+
 }
 
 /* Header button on the right */
@@ -81,4 +129,12 @@
     height: 64px;
     
 }
+
+.nav-scroll-view-top-spacer 
+{
+    height: 100px;      /* Adjust the vertical space as needed */
+    width: 100%;       /* Make it stretch across the container */
+    flex-shrink: 0;    /* Prevent it from shrinking */
+}
+
 
